binrw/tests/ui/invalid_keyword_struct_field.stderr
error: expected one of: `big`, `little`, `is_big`, `is_little`, `map`, `try_map`, `repr`, `magic`, `args`, `args_raw`, `calc`, `default`, `ignore`, `parse_with`, `count`, `offset`, `offset_after`, `if`, `deref_now`, `postprocess_now`, `restore_position`, `try`, `temp`, `assert`, `err_context`, `pad_before`, `pad_after`, `align_before`, `align_after`, `seek_before`, `pad_size_to`, `dbg`
 --> $DIR/invalid_keyword_struct_field.rs:5:10
  |
5 |     #[br(invalid_struct_field_keyword)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
